# MLPROY

./: .coverage  .gitignore  .pyproject.toml.kate-swp  Dockerfile  LICENSE  Makefile  README.md  app.py  mlflow.db  prometheus.yml  pyproject.toml
.github/workflows/: CI.yml
aux/: aux.txt  aux2.txt  aux3.txt
logs/0/: meta.yaml
logs/120749864114663336/: meta.yaml
logs/120749864114663336/0b9b490a77f04b8486ed7b24ebf8a6e5/: meta.yaml
logs/120749864114663336/0ee19c9d5e684a94bfbc24b2cea92b26/: meta.yaml
logs/120749864114663336/4e106dbb4a0541c9b476c65af090bd4a/: meta.yaml
logs/120749864114663336/561c80c183d246e5b21cbbb7c8efdb42/: meta.yaml
logs/128470993355246648/: meta.yaml
logs/197299241959060557/: meta.yaml
logs/299859893435964893/: meta.yaml
logs/370250419910217333/: meta.yaml
logs/430241539164690927/: meta.yaml
logs/435621182784824694/: meta.yaml
logs/448879969255836476/: meta.yaml
logs/459895634110855323/: meta.yaml
logs/473507781700060957/: meta.yaml
logs/496551183148288920/: meta.yaml
logs/528334769207699637/: meta.yaml
logs/534140853683851894/: meta.yaml
logs/604976336428676820/: meta.yaml
logs/628286781017293971/: meta.yaml
logs/735296509145954396/: meta.yaml
logs/968188844141870472/: meta.yaml
models/: model.ubj
src/: __init__.py  training_script.py
src/api/: api.py
src/fproy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/logic/: load_data.py  mlflow.db  predictor.py  serialize.py  trainer.py
src/tests/: test_logic.py
templates/: home.html
(+1028 files in other folders)
